# xlmtec

./: 404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PROJECT_STRUCTURE.md  README.md  audit_repo.py  check_sprint30.py  conftest.py  finetune_cli_v1_deprecated.py  fix_ci.py  fix_duplicate_key.py  fix_ruff.py  index.html  mkdocs.yml  pyproject.toml  rename_to_xlmtec.py  sitemap.xml  validate_ci.py
.github/workflows/: ci.yml  deploy_docs.yml  publish.yml
ARCHITECTURE/: index.html
api/: index.html
configuration/: index.html
core/: types.py
dashboard/: index.html
docs/: ARCHITECTURE.md  api.md  cli_guide  configuration.md  examples.md  index.md  installation.md  training_and_evaluation.md  troubleshooting.md  tui.md  usage.md  vanilla_distillation.md
examples/: CONTEXT.md  complete_training_pipeline.py  generate_sample_data.py  index.html  test_data_pipeline.py
examples/configs/: dpo.yaml  feature_distillation.yaml  full_finetuning.yaml  instruction_tuning.yaml  lora_gpt2.yaml  qlora_llama.yaml  response_distillation.yaml  structured_pruning.yaml  sweep_lora_gpt2.yaml  wanda.yaml
export/: index.html
finetune_cli/cli/: main.py
finetune_cli/cli/commands/: config.py  evaluate.py  recommend.py  train.py
finetune_cli/core/: config.py  exceptions.py  types.py
finetune_cli/evaluation/: CONTEXT.md  __init__.py  base.py  benchmarker.py  evaluator.py  metrics.py
finetune_cli/models/: loader.py
finetune_cli/trainers/: CONTEXT.md  __init__.py  base.py  dpo_trainer.py  factory.py  feature_distillation_trainer.py  full_trainer.py  instruction_trainer.py  lora_trainer.py  qlora_trainer.py  response_distillation_trainer.py  structured_pruner.py  wanda_pruner.py
finetune_cli/tui/: __init__.py  app.py
finetune_cli/tui/screens/: benchmark.py  evaluate.py  home.py  merge.py  recommend.py  result.py  running.py  train.py  upload.py
finetune_cli/tui/widgets/: __init__.py  command_card.py  log_panel.py  metric_table.py
finetune_cli/utils/: logging.py
hub/: index.html
installation/: index.html
lmtool/cli/: main.py
lmtool/cli/commands/: config.py  evaluate.py  recommend.py  train.py
lmtool/core/: CONTEXT.md
lmtool/evaluation/: evaluator.py  metrics.py
lmtool/trainers/: base.py  structured_pruner.py  wanda_pruner.py
lmtool/tui/: __init__.py  app.css  app.py
lmtool/tui/screens/: benchmark.py  evaluate.py  home.py  merge.py  recommend.py  result.py  running.py  train.py  upload.py
lmtool/tui/widgets/: log_panel.py  metric_table.py
plugin/: index.html
predict/: index.html
resume/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/ARCHITECTURE/: index.html
site/api/: index.html
site/configuration/: index.html
site/examples/: index.html
site/installation/: index.html
site/training_and_evaluation/: index.html
site/troubleshooting/: index.html
site/usage/: index.html
site/vanilla_distillation/: index.html
tasks/: CONTEXT.md  lessons.md  roadmap.md  todo.md
template/: index.html
tests/: CONTEXT.md  conftest.py  test_benchmark.py  test_checkpoints.py  test_cli_train.py  test_config.py  test_dashboard.py  test_data.py  test_dpo_trainer.py  test_evaluate.py  test_evaluation.py  test_export.py  test_feature_distillation_trainer.py  test_full_trainer.py  test_hub.py  test_inference.py  test_instruction_trainer.py  test_integration.py  test_integrations.py  test_merge.py  test_notifications.py  test_plugins.py  test_prune.py  test_qlora_trainer.py  test_recommend.py  test_response_distillation_trainer.py  test_structured_pruner.py  test_sweep.py  test_telemetry.py  test_templates.py  test_trainers.py  test_tui.py  test_upload.py  test_ux.py  test_wanda_cli.py  test_wanda_pruner.py
trainers/: __init__.py  factory.py
training_and_evaluation/: index.html
troubleshooting/: index.html
tui/: index.html
usage/: index.html
vanilla_distillation/: index.html
xlmtec/cli/: CONTEXT.md  main.py  ux.py
xlmtec/cli/commands/: ai_suggest.py  config.py  config_validate.py  dashboard.py  dry_run.py  evaluate.py  export.py  hub.py  plugin.py  predict.py  recommend.py  report.py  resume.py  sweep.py  template.py  train.py
xlmtec/core/: CONTEXT.md  config.py  config_builder.py  exceptions.py  types.py
xlmtec/dashboard/: CONTEXT.md  __init__.py  comparator.py  reader.py
xlmtec/evaluation/: __init__.py  base.py  benchmarker.py  evaluator.py  metrics.py
xlmtec/export/: CONTEXT.md  __init__.py  exporter.py  formats.py
xlmtec/export/backends/: gguf.py  onnx.py  safetensors.py
xlmtec/inference/: CONTEXT.md  __init__.py  data_loader.py  predictor.py  writer.py
xlmtec/integrations/: CONTEXT.md  __init__.py  base.py  claude.py  codex.py  gemini.py  prompt_builder.py  response_parser.py
xlmtec/models/: loader.py
xlmtec/notifications/: base.py  desktop.py  dispatcher.py  email.py  slack.py
xlmtec/plugins/: CONTEXT.md  __init__.py  loader.py  store.py
xlmtec/sweep/: CONTEXT.md  config.py  runner.py
xlmtec/templates/: CONTEXT.md  __init__.py  registry.py
xlmtec/trainers/: base.py  dpo_trainer.py  factory.py  feature_distillation_trainer.py  full_trainer.py  instruction_trainer.py  lora_trainer.py  qlora_trainer.py  response_distillation_trainer.py  structured_pruner.py  wanda_pruner.py
xlmtec/tui/: __init__.py  app.css  app.py
xlmtec/tui/screens/: benchmark.py  evaluate.py  home.py  merge.py  recommend.py  result.py  running.py  train.py  upload.py
xlmtec/tui/widgets/: command_card.py  metric_table.py
xlmtec/utils/: crash_report.py  logging.py  telemetry.py
