[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmtool"
version = "3.15.0"
description = "Production-grade LLM fine tuning framework with CLI"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Abdur Rahman" }
]
keywords = ["llm", "fine-tuning", "lora", "qlora", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ---------------------------------------------------------------------------
# Core (lightweight) — installs in seconds, no GPU libraries
# ---------------------------------------------------------------------------
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    "rouge-score>=0.1.2",
    "nltk>=3.8.0",
    "pandas>=2.0.0",
    "huggingface-hub>=0.19.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
]

# ---------------------------------------------------------------------------
# Optional extras — install what you need
# ---------------------------------------------------------------------------
[project.optional-dependencies]

# Full ML stack (training / inference)
ml = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "peft>=0.7.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
]

# Interactive terminal UI
tui = [
    "textual>=0.52.0",
]

# DPO training (requires trl)
dpo = [
    "trl>=0.7.0",
]

# Development (tests, linting, type-checking)
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-minify-plugin>=0.7.0",
    "pymdown-extensions>=10.0.0",
]

# Convenience: everything
full = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "peft>=0.7.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
    "textual>=0.52.0",
    "trl>=0.7.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# ---------------------------------------------------------------------------
[project.urls]
Homepage = "https://github.com/Abdur-azure/lmtool"
Documentation = "https://Abdur-azure.github.io/lmtool"
Issues = "https://github.com/Abdur-azure/lmtool/issues"

[project.scripts]
lmtool = "lmtool.cli.main:main"

# ---------------------------------------------------------------------------
# Setuptools
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]
include = ["lmtool*"]
exclude = ["tests*", "examples*", "docs*"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
timeout = 120
asyncio_mode = "auto"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# __init__.py files re-export names for the public API — F401 (unused import) is expected
"**/__init__.py" = ["F401"]
# Test files: F811 (redefinition of unused name from import) is fine in fixtures
"tests/test_*.py" = ["F811"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false